# glaurung

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  builder_example.rs  conftest.py  licenses.txt  log.md  overlay_test.rs  pyproject.toml  pytest.ini  sitecustomize.py
.claude/: config.yaml
.claude/agents/: rust-data-model-creator.md
.github/workflows/: samples-docker.yml  windows-corpus-guard.yml  windows-ghidra-parity-refresh.yml  windows-target-pipeline.yml
.glaurung/: windows-analysis.yaml
benches/: emulator.rs  entropy.rs  lang_detect.rs  strings.rs  triage.rs
benchmarks/: baseline.json  baseline.md
data/sigs/: glaurung-base.x86_64.flirt.json
data/types/: README.md  stdlib-libc-protos.json  stdlib-libc.json  stdlib-winapi-protos.json  stdlib-winapi.json  windows-api-sources.lock.json
docs/: IOC_VALIDATOR_V2.md  README.md  project-structure.md
docs/architecture/: 2026-07-13-architecture-quality-review.md  IDA_GHIDRA_PARITY.md  PERSISTENT_PROJECT.md
docs/axeyum-integration/: 00-motivation-and-goals.md  01-current-state.md  02-interface-mapping.md  03-architecture.md  04-phased-plan.md  05-risks-and-open-questions.md  06-validation-and-ci.md  07-decision-log.md  08-concretization-policy.md  09-taint-provenance-and-finding-labels.md  FEEDBACK-LOG.md  PAPER-NOTES.md  README.md
docs/campaigns/: analyst-ergonomics-2026-06-DIFF.md
docs/cli/: ASK_COMMAND.md  analyst-ergonomics.md
docs/data-model/: IMPLEMENTATION.md  README.md  disassembly_decompiler_foundations.md  nesting.md
docs/decompiler/: README.md
docs/demos/: README.md  demo-1-malware-triage.md  demo-2-vulnerability-hunting.md  demo-3-patch-analysis.md
docs/design/: decompiler-refactors.md  ioctl-taint.md  review-findings-cf-closure.md  review-findings-width-effect.md  typed-ssa-hlir.md
docs/development/: guidelines.md  project-structure.md  roadmap.md  setup.md
docs/disassembly/: README.md
docs/formats/: android.md  compiler-artifacts.md  sepolicy-policydb-format.md
docs/language-detection/: FAILURE_ANALYSIS.md  IMPLEMENTATION_SUMMARY.md
docs/llm/: AGENT_ITERATION.md  AGENT_REFACTOR_GUIDE.md  EMBEDDED_CONTENT_TOOLS.md  FEATURES-001.md  ITERATION_SUMMARY.md  RE_TOOLS_OVERVIEW.md  ROADMAP.md  SOURCE_RECOVERY_TOOLS.md  TOOLS.md
docs/parsers/: README.md  elf-consolidation-plan.md  elf-migration-guide.md  elf-technical-design.md  macho-consolidation-plan.md  macho-migration-guide.md  macho-technical-design.md  pe-consolidation-plan.md  pe-migration-guide.md  pe-technical-design.md
docs/sessions/: 2026-04-26-tutorial-and-bug-L-verification.md
docs/symbols/: ENHANCEMENTS.md  IMPLEMENTATION.md
docs/syscalls/: linux.md  windows.md
docs/tmp/: pyext-separation.md
docs/triage/: ADDITIONAL_FEATURES.md  ADVANCED-FEATURES.md  DETAILED_IMPLEMENTATION_PLAN.md  IMPLEMENTATION.md  README.md  RECOMMENDATIONS.md  SIGNATURE_DESIGN.md  packer-config.md  similarity.md
docs/tutorial/: PLAN.md  README.md
docs/windows-port/: README.md  agentic-ai-functionality-roadmap.md  atomic-tools.md  bsim-similarity-design.md  co-investment-policy.md  glaurung-vs-ghidra-full-debug-review.md  glaurung-vs-ghidra-regression-review.md  glaurung_vs_ghidra_vendor_windows.json  glaurung_vs_ghidra_vendor_windows.md  glaurung_vs_ghidra_vendor_windows_30.json  glaurung_vs_ghidra_vendor_windows_30.md  glaurung_vs_ghidra_vendor_windows_30_after_tiny_stub_gate.json  glaurung_vs_ghidra_vendor_windows_30_after_tiny_stub_gate.md  glaurung_vs_ghidra_vendor_windows_30_diagnostics.json  pdb-ingestion-design.md  pe-hardening-design.md  roadmap.md  windows-analysis-config.md  windows-api-type-sync.md
examples/: analyze_with_ioc_validation.py  ast_demo.rs  axeyum_diff.rs  axeyum_incremental.rs  axeyum_infeasible_path_proof.rs  axeyum_sweep.rs  check_canary.rs  check_prologue.rs  demo_ioc_validation.py  ioctl_scan.rs  ioctl_surface_scan.rs  ioctlance.rs  iterative_analysis.py  linux_symbolic_cve.rs  linux_symbolic_frontend.rs  ordered_native_replay.rs  python_triage_examples.py  test_classifier.rs  test_no_hallucination.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: containers_detect.rs  entropy_analyze.rs  headers_validate.rs  parsers_parse.rs  sniffers_sniff.rs
java/glaurung-jvm-tools/: pom.xml
python/glaurung/: __init__.py  __init__.pyi  __main__.py  cli.py  glaurung.pyi  java_classfile_policy.py  logging.py  pdb_fetch.py  similarity.py  strings.pyi  triage.py  triage.pyi  windows_analysis.py  windows_analysis.pyi  windows_config.py
python/pytest/: __init__.pyi
python/tests/: conftest.py  test_abi_argument_recovery.py  test_address.py  test_address_range.py  test_address_space.py  test_adversarial_coverage.py  test_agent_refactor.py  test_all.py  test_annotated_lift_grounding.py  test_artifact.py  test_artifact_similarity.py  (+345 more)
reference/: README.md
samples/: .dockerignore  README.md  build-all-platforms.sh  build-binaries.sh  build-compressed.sh  build-msvc.sh  build-multiplatform.sh  build-packed.sh  docker-compose.yml  test-docker.sh  test_python_multi_version.sh
scripts/: asb_tailcall_augment.py  build-macho-samples.sh  build_adversarial_samples.py  format-python.sh  format-rust.sh  harden.sh  index_samples.py  ioctlance_parity.py  lint-python.sh  lint-rust.sh  recover_source.py  setup-references.sh  typecheck-python.sh  verify_tutorial.py  windows_ghidra_parity.py
src/: error.rs  example_integration.rs  lib.rs  logging.rs  timeout.rs  winmd.rs
tests/: android_dex_triage.rs  android_pac_bti_cfg.rs  android_pac_stripped_discovery.rs  android_packed_relocations.rs  cfg_integration.rs  compiler_detection_comprehensive.rs  compiler_detection_test.rs  config_integration.rs  demangle_integration.rs  disasm_basic.rs  disasm_integration.rs  elf_rpaths.rs  lib.rs  overlay_integration.rs  pe_iat_map_integration.rs  pe_tls_directory_msvc_pdb.rs  pe_tls_entry.rs  simple_integration.rs  strings_integration.rs  symbols_integration.rs  test_kb.py  test_llm_tools.py  test_tools_direct.py
todo/: 001-setup.md
tools/: diff_decompile.py  fixture_harness.py
(+1124 files in other folders)
