[package]
name = "glaurung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glaurung"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0", optional = true }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2.0"
infer = "0.19.0"
mime_guess = "2.0.5"
object = "0.37.3"
aho-corasick = "1.1.3"
encoding_rs = "0.8.35"
memchr = "2.7"
regex = "1.10"
once_cell = "1.19"
strsim = "0.11"
goblin = { version = "0.10.1", optional = true, default-features = true }
pelite = { version = "0.10", optional = true }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime for timeouts
tokio = { version = "1", features = ["rt", "time", "macros"] }
whatlang = "0.16.4"
memmap2 = "0.9.4"
bytes = "1.6.1"
blake3 = "1.5.1"
cpp_demangle = "0.4"
rustc-demangle = "0.1"
msvc-demangler = "0.10"

[features]
default = ["triage-core"]
triage-core = []
triage-heuristics = []
triage-containers = []
triage-parsers-extra = ["goblin", "pelite"]
python-ext = ["pyo3", "pyo3/extension-module"]

[dev-dependencies]
tempfile = "3.21.0"
criterion = { version = "0.7.0", features = ["html_reports"], default-features = false }

[[bench]]
name = "triage"
harness = false

[[bench]]
name = "entropy"
harness = false

[[bench]]
name = "strings"
harness = false
