[package]
name = "glaurung"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "glaurung"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.26.0", optional = true }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.0", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"
md5 = "0.7"
chrono = { version = "0.4", features = ["serde"] }
bitflags = "2.0"
infer = "0.19.0"
mime_guess = "2.0.5"
object = "0.37.3"
gimli = { version = "0.33", default-features = false, features = ["read", "std"] }
pdb = "0.8"
aho-corasick = "1.1.3"
encoding_rs = "0.8.35"
memchr = "2.7"
regex = "1.10"
once_cell = "1.19"
strsim = "0.11"
goblin = { version = "0.10.1", optional = true, default-features = true }
pelite = { version = "0.10", optional = true }
iced-x86 = "1.20"
capstone = "0.12"

# Native in-process SMT solver (feature `solver-z3`); links libz3. Optional.
z3 = { version = "0.12", optional = true }

# DEV-ONLY differential-test oracle (feature `dev-oracle`); links the system
# Unicorn engine via pkg-config (libunicorn-dev). Never shipped in the wheel.
unicorn-engine = { version = "2.1.5", optional = true, features = ["dynamic_linkage"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async runtime for timeouts
tokio = { version = "1", features = ["rt", "time", "macros"] }
whatlang = "0.16.4"
unicode-script = "0.5"
memmap2 = "0.9.4"
bytes = "1.6.1"
blake3 = "1.5.1"
cpp_demangle = "0.4"
rustc-demangle = "0.1"
msvc-demangler = "0.10"
rayon = "1.10"
windows-metadata = "0.60"
# APK/AAB/JAR member extraction (ZIP central directory + DEFLATE). Already
# present transitively; declared directly for the `formats::apk` reader.
flate2 = "1.0"

[features]
default = ["triage-core"]
triage-core = []
triage-heuristics = []
triage-containers = []
triage-parsers-extra = ["goblin", "pelite"]
# The Python extension bundles the (pure-Rust) emulator (`exec`). The symbolic
# engine / native solver stay opt-in (build the wheel with `--features symbolic`
# or `solver-z3` to include them).
python-ext = ["pyo3", "pyo3/extension-module", "exec"]
# Native execution engine (concrete emulator). Pure Rust, no new C dependency —
# see docs/design/execution-engine/. Off by default; opt in with --features exec.
exec = []
# Symbolic / concolic execution over the same engine. Builds a bitvector
# expression IR (pure Rust). The solver is pluggable behind a trait.
symbolic = ["exec"]
# DEV-ONLY: validate the emulator against the Unicorn engine (links system
# libunicorn). Never shipped. Use: cargo test --features dev-oracle.
dev-oracle = ["exec", "dep:unicorn-engine"]
# Native, in-process SMT backend via the `z3` crate (Rust API, links libz3).
# This is the preferred solver path — keeps the engine self-contained rather
# than shelling out to a binary. Optional; the base build needs no solver.
solver-z3 = ["symbolic", "dep:z3"]

[dev-dependencies]
tempfile = "3.21.0"
criterion = { version = "0.7.0", features = ["html_reports"], default-features = false }

[[bench]]
name = "triage"
harness = false

[[bench]]
name = "entropy"
harness = false

[[bench]]
name = "strings"
harness = false

[[bench]]
name = "lang_detect"
harness = false

[[bench]]
name = "emulator"
harness = false
required-features = ["exec"]

# Examples that drive the symbolic engine only build with its feature enabled,
# so `cargo build --all-targets` under default features skips them cleanly.
[[example]]
name = "ioctl_scan"
required-features = ["symbolic"]

[[example]]
name = "ioctlance"
required-features = ["symbolic"]
