[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "glaurung"
requires-python = ">=3.11"
description = "A modern rewrite of Ghidra in Rust/Python with first-class agentic AI"
authors = [
    {name = "Michael Bommarito", email = "michael.bommarito@gmail.com"}
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: Software Development :: Disassemblers",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = ["version"]
dependencies = [
    "structlog>=25.4.0",
]

[project.scripts]
glaurung = "glaurung.cli:main"
[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module", "python-ext"]
include = [
    "python/glaurung/py.typed",
    "python/glaurung/*.pyi",
]
module-name = "glaurung._native"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
